--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -1,18 +1,17 @@
 @import "tailwindcss";
-@plugin "@tailwindcss/typography";
 
 @theme {
-    --color-primary-50: #fef2f2;
-    --color-primary-100: #fee2e3;
-    --color-primary-200: #fecacc;
-    --color-primary-300: #fca5a8;
-    --color-primary-400: #f77277;
-    --color-primary-500: #ee444b;
-    --color-primary-600: #d2222a;
-    --color-primary-700: #b81d23;
-    --color-primary-800: #981c21;
-    --color-primary-900: #7e1e22;
-    --color-primary-950: #450a0c;
+    --color-primary-50: oklch(97.05% 0.0129 17.38);
+    --color-primary-100: oklch(93.59% 0.0309 15.25);
+    --color-primary-200: oklch(88.51% 0.0592 15.75);
+    --color-primary-300: oklch(80.84% 0.1033 17.35);
+    --color-primary-400: oklch(71.18% 0.1634 19.87);
+    --color-primary-500: oklch(63.62% 0.2061 23.19);
+    --color-primary-600: oklch(55.68% 0.2082 25.67);
+    --color-primary-700: oklch(50.48% 0.1883 25.89);
+    --color-primary-800: oklch(44.32% 0.159 24.98);
+    --color-primary-900: oklch(39.57% 0.1305 23.43);
+    --color-primary-950: oklch(25.78% 0.0883 24.42);
 
     --color-secondary-50: #ebfeff;
     --color-secondary-100: #cdfaff;
@@ -49,6 +48,63 @@
         @variant dark {
             background: var(--color-neutral-900);
             color: var(--color-stone-50);
+        }
+    }
+
+    h1 {
+        font-size: var(--text-5xl);
+        margin: --spacing(3) 0 --spacing(5);
+    }
+
+    h2 {
+        font-size: var(--text-4xl);
+        margin: --spacing(2) 0 --spacing(4);
+    }
+
+    h3 {
+        font-size: var(--text-3xl);
+        margin: --spacing(1) 0 --spacing(3);
+    }
+
+    h4 {
+        font-size: var(--text-xl);
+        margin: --spacing(1) 0 --spacing(2);
+    }
+
+    h5 {
+        font-size: var(--text-lg);
+        margin: --spacing(0.5) 0 --spacing(1);
+    }
+
+    /* First heading has less top margin when it follows another heading */
+    h1 + h2,
+    h1 + h3,
+    h1 + h4,
+    h1 + h5,
+    h2 + h3,
+    h2 + h4,
+    h2 + h5,
+    h3 + h4,
+    h3 + h5,
+    h4 + h5 {
+        margin-top: --spacing(1);
+    }
+
+    p {
+        font-size: var(--text-lg);
+        margin-top: --spacing(3);
+
+        /* First paragraph after a heading gets a small margin */
+        h1 + &,
+        h2 + &,
+        h3 + &,
+        h4 + &,
+        h5 + & {
+            margin-top: --spacing(2);
+        }
+
+        &:not(:last-of-type) {
+            margin-bottom: --spacing(4);
         }
     }
 
